WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279373
[WebGPU] Transparent canvases are not supported in WebGPU
https://bugs.webkit.org/show_bug.cgi?id=279373
Summary
[WebGPU] Transparent canvases are not supported in WebGPU
Mike Wyrzykowski
Reported
2024-09-09 11:19:28 PDT
[WebGPU] Background is black on some websites while Chrome clear to white
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-09 11:25:34 PDT
<
rdar://problem/135563124
>
Mike Wyrzykowski
Comment 2
2024-09-09 13:36:05 PDT
The root cause here is a canvas with transparent pixels is not correctly composited.
Mike Wyrzykowski
Comment 3
2024-10-01 22:39:39 PDT
This has turned into a sample now,
https://webgpu.github.io/webgpu-samples/?sample=transparentCanvas
- we should prioritize fixing
Mike Wyrzykowski
Comment 4
2024-11-01 23:39:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36089
EWS
Comment 5
2024-11-04 13:53:35 PST
Committed
286121@main
(1ab851a8c493): <
https://commits.webkit.org/286121@main
> Reviewed commits have been landed. Closing PR #36089 and removing active labels.
Mike Wyrzykowski
Comment 6
2024-11-12 09:13:07 PST
***
Bug 282982
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug