[WebGPU] Transparent canvases are not supported in WebGPU https://bugs.webkit.org/show_bug.cgi?id=279373 rdar://135563124

Reviewed by Tadeu Zagallo.

The canvas alphaMode defaults to 'opaque', use 'premultiplied' for transparency.

This resolves the lack of transparency with https://webgpu.github.io/webgpu-samples/?sample=transparentCanvas

* Source/WebCore/html/canvas/GPUCanvasContextCocoa.mm:
(WebCore::GPUCanvasContextCocoa::configure):

Canonical link: https://commits.webkit.org/286121@main